--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-# Compiled class file
-*.class
+# macOS
+.DS_Store
 
-# Log file
-*.log
+# Intellij
+*.iml
+/.idea
+!/.idea/codeStyles
+out
 
-# BlueJ files
-*.ctxt
+# Gradle
+.gradle
+/build
+/buildSrc
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Services
+/newrelic
