--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,6 +36,17 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
-          arguments: build
-      - name: Code Coverage Summary
-        uses: irongut/CodeCoverageSummary@v1.3.0
+          arguments: clean build
+      - name: Upload coverage report to CodeCov
+        uses: codecov/codecov-action@v2
+        with:
+          files: build/reports/jacoco/test/jacocoTestReport.xml
+          fail_ci_if_error: true
+          verbose: true
+      - name: Upload reports and test results to GitHub
+        uses: actions/upload-artifact@v2
+        with:
+          name: reports-and-test-results
+          path: |
+            build/reports/
+            build/test-results/
