--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,14 +34,14 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        uses: gradle/gradle-build-action@v2
         with:
           arguments: clean build
       - name: Upload coverage report to CodeCov
         uses: codecov/codecov-action@v2
         with:
           files: build/reports/jacoco/test/jacocoTestReport.xml
-          fail_ci_if_error: true
+          fail_ci_if_error: false
           verbose: true
       - name: Upload reports and test results to GitHub
         uses: actions/upload-artifact@v2
