--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,3 +50,11 @@ jobs:
           path: |
             build/reports/
             build/test-results/
+      - name: Add coverage to PR
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.3
+        with:
+          paths: build/reports/jacoco/test/jacocoTestReport.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 40
+          min-coverage-changed-files: 60
