--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -59,10 +59,11 @@ jobs:
         run: |
           echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
           echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
-      - name: Commit the badge (if it changed)
+      - name: Checkout v3
         uses: actions/checkout@v3
         with:
           ref: ${{ github.ref_name }}
+      - name: Commit the badge (if it changed)
         run: |
           if [[ `git status --porcelain` ]]; then
             git config --global user.name 'Jacoco coverage'
